syntax = "proto3";

package ampb;

import "shpb/anime_image.proto";
import "ampb/anime_movie.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb/ampb";

message CreateAnimeMovieImageRequest {
  int64                  animeID     = 1;
  shpb.AnimeImageRequest animeImages = 2;
}

message CreateAnimeMovieImageResponse {
  AnimeMovieResponse      animeMovie  = 1;
  shpb.AnimeImageResponse animeImages = 2;
}